# MangoKnight

./: .gitignore  CMakeLists.txt  battle.cpp  battle.hpp  element.cpp  element.hpp  main.cpp  misc.cpp  player.cpp  player.hpp  resonance.cpp  resonance.hpp  spellbook.cpp  spellbook.hpp
